# confalana

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
confalana/: __init__.py  core.py  exceptions.py  settings.ini
confalana/console/: __init__.py  command.py  messaging.py  setup.py
tests/: test_setup.py
