[tool.poetry]
name = "confalana"
version = "0.1.0"
description = "Ease config validation pain"
authors = ["VShumilin <vshumilin@naumen.ru>"]
packages = [
    {include = "confalana"}
]

[tool.poetry.dependencies]
python = "^3.6"
schema = "~0.7.1"
jsonschema = "^3.2.0"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
mypy = "0.750"
flake8 = "~3.6"

[tool.poetry.scripts]
confy = 'confalana.console:entry'

[build-system]
requires = ["poetry==1.0"]
build-backend = "poetry.masonry.api"
